--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ use_directory_urls: false
 theme:
   name: material
   logo: img/CDRT-REV-Red_s.png
+  custom_dir: overrides
   features:
     - navigation.tracking
     - navigation.instant
