--- a/docs/.authors.yml
+++ b/docs/.authors.yml
@@ -2,16 +2,16 @@ authors:
   Phil:
     name: Philip Jorgensen
     description: Deployment Expert
-    avatar: img/fav/favicon-32x32.png
+    avatar: img/fav/avatar.png
   Thad:
     name: Thad Lawson
     description: Deployment Expert
-    avatar: img/fav/favicon-32x32.png
+    avatar: img/fav/avatar.png
   Joe:
     name: Joe Parker
     description: Team Leader
-    avatar: img/fav/favicon-32x32.png
+    avatar: img/fav/avatar.png
   Devin:
     name: Devin McDermott
     description: Software Developer
-    avatar: img/fav/favicon-32x32.png
+    avatar: img/fav/avatar.png
